tests/snapshots/snapshots__budget_log_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (1033 words)

README.md
     1→log
     3→
      →…
    19→## Minimum supported `rustc`
    20→
      →…
    25→## Usage
    26→
    27→### In libraries
    28→
    29→Libraries should link only to the `log` crate, and use the provided macros to
    30→log whatever information will be useful to downstream consumers:
    31→
    32→```toml
    33→[dependencies]
    34→log = "0.4"
    35→```
    36→
    37→```rust
    38→use log::{info, trace, warn};
    39→
    40→pub fn shave_the_yak(yak: &mut Yak) {
    41→    trace!("Commencing yak shaving");
    42→
    43→    loop {
    44→        match find_a_razor() {
    45→            Ok(razor) => {
    46→                info!("Razor located: {razor}");
    47→                yak.shave(razor);
    48→                break;
    49→            }
    50→            Err(err) => {
    51→                warn!("Unable to locate a razor: {err}, retrying");
    52→            }
    53→        }
    54→    }
    55→}
    56→```
    57→
    58→### In executables
    59→
      →…
   106→## Structured logging
   107→
      →…
rfcs/0296-structured-logging.md
   502→### Don't break anything
   503→
   504→Allow structured logging to be added in the current `0.4.x` series of `log`. This gives us the option of including structured logging in an `0.4.x` release, or bumping the minor crate version without introducing any actual breaking changes.
   505→
  1598→#### Build a serialization contract in `log`
  1599→
  1600→Instead of internalizing a few serialization frameworks, `log` could provide a public common contract for them to conform to:
  1601→
  1602→```rust
  1603→// Instead of `Value::from_any` + `FromAny`
  1604→
  1605→pub trait Visit {
  1606→    fn visit(&self, visitor: &mut dyn Visitor) -> Result<(), Error>;
  1607→}
  1608→
  1609→pub trait Visitor {
  1610→    fn u64(&mut self, v: u64) -> Result<(), Error>;
  1611→    fn i64(&mut self, v: i64) -> Result<(), Error>;
  1612→
  1613→    ..
  1614→}
  1615→```
  1616→
      →…
src/__private_api.rs
     9→#[cfg(not(feature = "kv"))]
    10→pub type Value<'a> = &'a str;
    12→mod sealed {
    14→    pub trait KVs<'a> {
    15→        fn into_kvs(self) -> Option<&'a [(&'a str, super::Value<'a>)]>;
    16→    }
    39→pub struct GlobalLogger;
    56→fn log_impl …
   112→#[cfg(feature = "kv")]
   113→mod kv_support {
   114→    use crate::kv;
   115→
   116→    pub type Value<'a> = kv::Value<'a>;
src/kv/error.rs
     5→pub struct Error {
     6→    inner: Inner,
      →…
     9→#[derive(Debug)]
    10→enum Inner {
    11→    #[cfg(feature = "std")]
    12→    Boxed(std_support::BoxedError),
    13→    Msg(&'static str),
    14→    #[cfg(feature = "value-bag")]
    15→    Value(crate::kv::value::inner::Error),
    16→    Fmt,
    17→}
    69→mod std_support {
    73→    pub(super) type BoxedError = Box<dyn error::Error + Send + Sync>;
src/kv/key.rs
     7→pub trait ToKey {
     8→    /// Perform the conversion.
    37→pub struct Key<'k> {
    38→    // NOTE: This may become `Cow<'k, str>`
      →…
    94→mod std_support {
   113→mod sval_support {
   136→mod serde_support {
src/kv/mod.rs
   246→mod error;
   247→mod key;
   250→mod source;
   252→mod value;
   259→#[cfg(feature = "kv_unstable")]
   260→pub mod source;
   261→#[cfg(feature = "kv_unstable")]
   262→pub mod value;
src/kv/source.rs
    51→pub trait Source {
    52→    /// Visit key-values.
    91→fn get_default …
   114→fn count_default …
   235→pub trait VisitSource<'kvs> {
   236→    /// Visit a key-value pair.
   241→impl<'a, 'kvs, T> VisitSource<'kvs> for &'a mut T
   242→where
   243→    T: VisitSource<'kvs> + ?Sized,
   244→{
   280→mod std_support {
src/kv/value.rs
    11→pub trait ToValue {
    12→    /// Perform the conversion.
   119→pub struct Value<'v> {
   120→    inner: inner::Inner<'v>,
      →…
   204→    fn from_inner …
   235→impl<'v> serde_core::Serialize for Value<'v> {
   245→impl<'v> sval::Value for Value<'v> {
   252→impl<'v> sval_ref::ValueRef<'v> for Value<'v> {
   288→macro_rules! impl_to_value_primitive {
   312→macro_rules! impl_to_value_nonzero_primitive {
   336→macro_rules! impl_value_to_primitive {
   390→mod std_support {
   462→pub trait VisitValue<'v> {
   463→    /// Visit a `Value`.
   539→impl<'a, 'v, T: ?Sized> VisitValue<'v> for &'a mut T
   540→where
   541→    T: VisitValue<'v>,
   542→{
   601→#[cfg(feature = "value-bag")]
   602→pub(in crate::kv) mod inner {
   603→    /**
   720→#[cfg(not(feature = "value-bag"))]
   721→pub(in crate::kv) mod inner {
   722→    /**
   738→    pub enum Inner<'v> {
   739→        None,
      →…
  1129→macro_rules! as_debug {
  1139→macro_rules! as_display {
  1149→macro_rules! as_error {
  1159→macro_rules! as_serde {
  1169→macro_rules! as_sval {
src/lib.rs
   405→#[macro_use]
   406→mod macros;
   407→mod serde;
   409→#[cfg(feature = "kv")]
   410→pub mod kv;
   420→#[cfg(not(target_has_atomic = "ptr"))]
   421→struct AtomicUsize {
   422→    v: Cell<usize>,
   423→}
   426→impl AtomicUsize {
   427→    const fn new …
   431→    fn load …
   435→    fn store …
   443→unsafe impl Sync for AtomicUsize {}
   447→static mut LOGGER …
   449→static STATE …
   454→const UNINITIALIZED …
   455→const INITIALIZING …
   456→const INITIALIZED …
   458→static MAX_LOG_LEVEL_FILTER …
   460→static LOG_LEVEL_NAMES …
   462→static SET_LOGGER_ERROR …
   464→static LEVEL_PARSE_ERROR …
   475→pub enum Level {
   476→    /// The "error" level.
   477→    ///
   478→    /// Designates very serious errors.
      →…
   516→    type Err = ParseLevelError;
   535→    fn from_usize …
   636→pub enum LevelFilter {
   637→    /// A level lower than all log levels.
   638→    Off,
   639→    /// Corresponds to the `Error` log level.
      →…
   666→    type Err = ParseLevelError;
   685→    fn from_usize …
   780→#[derive(Copy, Clone, Eq, PartialEq, Ord, PartialOrd, Hash, Debug)]
   781→enum MaybeStaticStr<'a> {
   782→    Static(&'static str),
   783→    Borrowed(&'a str),
   784→}
   787→    #[inline]
   788→    fn get(&self) -> &'a str {
   789→        match *self {
      →…
   842→pub struct Record<'a> {
   843→    metadata: Metadata<'a>,
   844→    args: fmt::Arguments<'a>,
   845→    module_path: Option<MaybeStaticStr<'a>>,
      →…
   856→#[cfg(feature = "kv")]
   857→#[derive(Clone)]
   858→struct KeyValues<'a>(&'a dyn kv::Source);
   861→impl<'a> fmt::Debug for KeyValues<'a> {
  1003→pub struct RecordBuilder<'a> {
  1004→    record: Record<'a>,
  1005→}
  1158→pub struct Metadata<'a> {
  1159→    level: Level,
  1160→    target: &'a str,
  1161→}
  1200→pub struct MetadataBuilder<'a> {
  1201→    metadata: Metadata<'a>,
  1202→}
  1249→pub trait Log: Sync + Send {
  1250→    /// Determines if a log message with the specified metadata would be
  1251→    /// logged.
  1252→    ///
  1282→/// A dummy initial value for LOGGER.
  1283→struct NopLogger;
  1311→impl<T> Log for std::boxed::Box<T>
  1312→where
  1313→    T: ?Sized + Log,
  1314→{
  1328→impl<T> Log for std::sync::Arc<T>
  1329→where
  1330→    T: ?Sized + Log,
  1331→{
  1482→#[cfg(target_has_atomic = "ptr")]
  1483→fn set_logger_inner<F>(make_logger: F) -> Result<(), SetLoggerError>
  1484→where
  1485→    F: FnOnce() -> &'static dyn Log,
  1486→{
  1487→    match STATE.compare_exchange(
      →…
  1549→pub struct SetLoggerError(());
  1559→impl error::Error for SetLoggerError {}
  1566→pub struct ParseLevelError(());
  1576→impl error::Error for ParseLevelError {}
  1599→#[doc(hidden)]
  1600→pub mod __private_api;
  1602→/// The statically resolved maximum log level.
  1603→///
  1604→/// See the crate level documentation for information on how to configure this.
  1605→///
  1606→/// This value is checked by the log macros, but not by the `Log`ger returned by
  1607→/// the [`logger`] function. Code that manually calls functions on that value
  1608→/// should compare the level against this value.
  1609→///
  1610→/// [`logger`]: fn.logger.html
  1611→pub const STATIC_MAX_LEVEL: LevelFilter = match cfg!(debug_assertions) {
  1612→    false if cfg!(feature = "release_max_level_off") => LevelFilter::Off,
  1613→    false if cfg!(feature = "release_max_level_error") => LevelFilter::Error,
  1614→    false if cfg!(feature = "release_max_level_warn") => LevelFilter::Warn,
      →…
test_max_level_features/main.rs
     6→#[cfg(not(feature = "std"))]
     7→fn set_boxed_logger(logger: Box<dyn Log>) -> Result<(), log::SetLoggerError> {
     8→    log::set_logger(Box::leak(logger))
     9→}
    11→struct State {
    12→    last_log: Mutex<Option<Level>>,
    13→}
    15→struct Logger(Arc<State>);
    17→impl Log for Logger {
    18→    fn enabled(&self, _: &Metadata) -> bool {
    19→        true
    20→    }
    22→    fn log(&self, record: &Record) {
    23→        *self.0.last_log.lock().unwrap() = Some(record.level());
    24→    }
    26→    fn flush(&self) {}
    29→fn main() {
    44→fn test(a: &State, filter: LevelFilter) {
    72→fn last(state: &State, expected: Option<Level>) {
