tests/snapshots/snapshots__budget_log_2000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 (1989 tokens)

Cargo.toml
     1→[package]
    19→[package.metadata.docs.rs]
    22→[features]
    56→[dependencies]
    62→[dev-dependencies]

README.md
     1→log
    19→## Minimum supported `rustc`
    25→## Usage
    27→### In libraries
    58→### In executables
   106→## Structured logging

rfcs/0296-structured-logging.md
     5→# Summary
    16→# Contents
    43→# Motivation
    98→# Guide-level explanation
   495→# Reference-level explanation
  1575→# Drawbacks, rationale, and alternatives
  1629→# Prior art
  1650→# Unresolved questions

src/__private_api.rs
     7→pub use std::{format_args, module_path, stringify};
     9→#[cfg(not(feature = "kv"))]
    10→pub type Value<'a> = &'a str;
    12→mod sealed {
    13→    /// Types for the `kv` argument.
    14→    pub trait KVs<'a> {
    23→    fn into_kvs …
    30→    fn into_kvs …
    37→/// The global logger proxy.
    38→#[derive(Debug)]
    39→pub struct GlobalLogger;
    56→fn log_impl …
   108→pub fn loc …
   113→mod kv_support {
   116→    pub type Value<'a> = kv::Value<'a>;
   135→    pub fn capture_error …
   140→    pub fn capture_sval …
   145→    pub fn capture_serde …
   151→pub use self::kv_support::*;

src/kv/error.rs
     3→/// An error encountered while working with structured data.
     4→#[derive(Debug)]
     5→pub struct Error {
     6→    inner: Inner,
     7→}
    10→enum Inner {
    20→    /// Create an error from a message.
    21→    pub fn msg(msg: &'static str) -> Self {
    29→    pub(super) fn from_value …
    37→    pub(super) fn into_value …
    49→    fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
    63→    fn from(_: fmt::Error) -> Self {
    69→mod std_support {
    70→    use super::*;
    76→        /// Create an error from a standard error type.
    77→        pub fn boxed<E>(err: E) -> Self
    78→        where
    79→            E: Into<BoxedError>,
    80→        {
    90→        fn from(err: io::Error) -> Self {

src/kv/key.rs
     7→pub trait ToKey {
     9→    fn to_key(&self) -> Key<'_>;
    37→pub struct Key<'k> {
    38→    // NOTE: This may become `Cow<'k, str>`
    39→    key: &'k str,
    40→}
    45→    pub fn from_str(key: &'k str) -> Self {
    53→    pub fn as_str(&self) -> &str {
    61→    pub fn to_borrowed_str(&self) -> Option<&'k str> {
    94→mod std_support {
    95→    use super::*;
   113→mod sval_support {
   114→    use super::*;
   136→mod serde_support {
   137→    use super::*;

src/kv/mod.rs
   246→mod error;
   247→mod key;
   250→mod source;
   252→mod value;
   254→pub use self::error::Error;
   255→pub use self::key::{Key, ToKey};
   256→pub use self::source::{Source, VisitSource};
   257→pub use self::value::{ToValue, Value, VisitValue};
   259→#[cfg(feature = "kv_unstable")]
   260→pub mod source;
   261→#[cfg(feature = "kv_unstable")]
   262→pub mod value;
   265→pub use self::source::Visitor;

src/kv/source.rs
     6→use crate::kv::{Error, Key, ToKey, ToValue, Value};
    51→pub trait Source {
    62→    fn visit<'kvs>(&'kvs self, visitor: &mut dyn VisitSource<'kvs>) -> Result<(), Error>;
    73→    fn get(&self, key: Key) -> Option<Value<'_>> {
    85→    fn count(&self) -> usize {
    91→fn get_default …
   114→fn count_default …
   235→pub trait VisitSource<'kvs> {
   237→    fn visit_pair(&mut self, key: Key<'kvs>, value: Value<'kvs>) -> Result<(), Error>;
   280→mod std_support {
   281→    use super::*;
   462→pub use VisitSource as Visitor;

src/kv/value.rs
     8→pub use crate::kv::Error;
    11→pub trait ToValue {
   119→pub struct Value<'v> {
   120→    inner: inner::Inner<'v>,
   121→}
   204→    fn from_inner …
   390→mod std_support {
   395→    use super::*;
   462→pub trait VisitValue<'v> {
   602→pub(in crate::kv) mod inner {
   610→    use super::*;
   612→    pub use value_bag::ValueBag as Inner;
   614→    pub use value_bag::Error;
   721→pub(in crate::kv) mod inner {
   735→    use super::*;
   738→    pub enum Inner<'v> {
   739→        None,
   740→        Bool(bool),
   741→        Str(&'v str),
   742→        Char(char),
      →        …
  1123→pub use VisitValue as Visit;
  1129→macro_rules! as_debug {
  1139→macro_rules! as_display {
  1149→macro_rules! as_error {
  1159→macro_rules! as_serde {
  1169→macro_rules! as_sval {

src/lib.rs
   406→mod macros;
   407→mod serde;
   409→#[cfg(feature = "kv")]
   410→pub mod kv;
   421→struct AtomicUsize {
   475→pub enum Level {
   516→    type Err = ParseLevelError;
   636→pub enum LevelFilter {
   666→    type Err = ParseLevelError;
   781→enum MaybeStaticStr<'a> {
   788→    fn get …
   842→pub struct Record<'a> {
   858→struct KeyValues<'a>(&'a dyn kv::Source);
  1003→pub struct RecordBuilder<'a> {
  1158→pub struct Metadata<'a> {
  1200→pub struct MetadataBuilder<'a> {
  1249→pub trait Log: Sync + Send {
  1283→struct NopLogger;
  1483→fn set_logger_inner …
  1549→pub struct SetLoggerError(());
  1566→pub struct ParseLevelError(());
  1600→pub mod __private_api;
  1602→/// The statically resolved maximum log level.
  1603→///
      →…
  1611→pub const STATIC_MAX_LEVEL: LevelFilter = match cfg!(debug_assertions) {

src/macros.rs
    75→macro_rules! log {
   165→macro_rules! error {
   204→macro_rules! warn {
   252→macro_rules! info {
   292→macro_rules! debug {
   336→macro_rules! trace {
   391→macro_rules! log_enabled {

src/serde.rs
     9→use crate::{Level, LevelFilter, LOG_LEVEL_NAMES};
    17→    fn serialize …
    32→    fn deserialize …
   111→    fn serialize …
   127→    fn deserialize …

test_max_level_features/Cargo.toml
     1→[package]
     7→[[bin]]
    11→[dependencies.log]

test_max_level_features/main.rs
     5→use log::set_boxed_logger;
     7→fn set_boxed_logger …
    11→struct State {
    15→struct Logger(Arc<State>);
    17→impl Log for Logger {
    18→    fn enabled(&self, _: &Metadata) -> bool {
    22→    fn log(&self, record: &Record) {
    26→    fn flush(&self) {}

tests/integration.rs

triagebot.toml
     1→[assign]
