tests/snapshots/snapshots__budget_log_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (4010 tokens)

CHANGELOG.md
     1→# Change Log

Cargo.toml
     1→[package]
    19→[package.metadata.docs.rs]
    22→[features]
    56→[dependencies]
    62→[dev-dependencies]

README.md
     1→log
     4→A Rust library providing a lightweight logging *facade*.
     5→
      →…
    19→## Minimum supported `rustc`
    21→`1.68.0+`
    22→
      →…
    25→## Usage
    27→### In libraries
    29→Libraries should link only to the `log` crate, and use the provided macros to
    30→log whatever information will be useful to downstream consumers:
    31→
    32→```toml
      →…
    58→### In executables
    60→In order to produce log output, executables have to use a logger implementation compatible with the facade.
    61→There are many available implementations to choose from, here are some options:
    62→
    63→* Simple minimal loggers:
      →…
   106→## Structured logging
   108→If you enable the `kv` feature, you can associate structured data with your log records:
   109→
      →…

benches/value.rs
     4→use log::kv::Value;

rfcs/0296-structured-logging.md
     5→# Summary
    16→# Contents
    43→# Motivation
    98→# Guide-level explanation
   495→# Reference-level explanation
  1575→# Drawbacks, rationale, and alternatives
  1629→# Prior art
  1650→# Unresolved questions

src/__private_api.rs
     3→use self::sealed::KVs;
     4→use crate::{logger, Level, Log, Metadata, Record};
     7→pub use std::{format_args, module_path, stringify};
     9→#[cfg(not(feature = "kv"))]
    10→pub type Value<'a> = &'a str;
    12→mod sealed {
    13→    /// Types for the `kv` argument.
    14→    pub trait KVs<'a> {
    37→/// The global logger proxy.
    38→#[derive(Debug)]
    39→pub struct GlobalLogger;
    56→fn log_impl …
   112→#[cfg(feature = "kv")]
   113→mod kv_support {
   114→    use crate::kv;
   116→    pub type Value<'a> = kv::Value<'a>;
   151→pub use self::kv_support::*;

src/kv/error.rs
     3→/// An error encountered while working with structured data.
     4→#[derive(Debug)]
     5→pub struct Error {
     6→    inner: Inner,
     7→}
     9→#[derive(Debug)]
    10→enum Inner {
    11→    #[cfg(feature = "std")]
    12→    Boxed(std_support::BoxedError),
    13→    Msg(&'static str),
    14→    #[cfg(feature = "value-bag")]
    15→    Value(crate::kv::value::inner::Error),
    16→    Fmt,
    17→}
    29→    pub(super) fn from_value …
    37→    pub(super) fn into_value …
    69→mod std_support {
    70→    use super::*;
    73→    pub(super) type BoxedError = Box<dyn error::Error + Send + Sync>;

src/kv/key.rs
     6→/// A type that can be converted into a [`Key`](struct.Key.html).
     7→pub trait ToKey {
    36→#[derive(Clone, Debug, PartialEq, Eq, PartialOrd, Ord, Hash)]
    37→pub struct Key<'k> {
    38→    // NOTE: This may become `Cow<'k, str>`
    39→    key: &'k str,
    40→}
    94→mod std_support {
    95→    use super::*;
   113→mod sval_support {
   114→    use super::*;
   136→mod serde_support {
   137→    use super::*;

src/kv/mod.rs
   246→mod error;
   247→mod key;
   250→mod source;
   252→mod value;
   254→pub use self::error::Error;
   255→pub use self::key::{Key, ToKey};
   256→pub use self::source::{Source, VisitSource};
   257→pub use self::value::{ToValue, Value, VisitValue};
   259→#[cfg(feature = "kv_unstable")]
   260→pub mod source;
   261→#[cfg(feature = "kv_unstable")]
   262→pub mod value;
   265→pub use self::source::Visitor;

src/kv/source.rs
     6→use crate::kv::{Error, Key, ToKey, ToValue, Value};
     9→/// A source of key-values.
    10→///
      →…
    51→pub trait Source {
    91→fn get_default …
   114→fn count_default …
   234→/// A visitor for the key-value pairs in a [`Source`](trait.Source.html).
   235→pub trait VisitSource<'kvs> {
   241→impl<'a, 'kvs, T> VisitSource<'kvs> for &'a mut T
   242→where
   243→    T: VisitSource<'kvs> + ?Sized,
   244→{
   280→mod std_support {
   281→    use super::*;
   462→pub use VisitSource as Visitor;

src/kv/value.rs
     8→pub use crate::kv::Error;
    10→/// A type that can be converted into a [`Value`](struct.Value.html).
    11→pub trait ToValue {
    33→/// A value in a key-value.
    34→///
      →…
   119→pub struct Value<'v> {
   120→    inner: inner::Inner<'v>,
   121→}
   204→    fn from_inner …
   235→impl<'v> serde_core::Serialize for Value<'v> {
   245→impl<'v> sval::Value for Value<'v> {
   252→impl<'v> sval_ref::ValueRef<'v> for Value<'v> {
   288→macro_rules! impl_to_value_primitive {
   312→macro_rules! impl_to_value_nonzero_primitive {
   336→macro_rules! impl_value_to_primitive {
   390→mod std_support {
   395→    use super::*;
   450→/// A visitor for a [`Value`].
   451→///
      →…
   462→pub trait VisitValue<'v> {
   539→impl<'a, 'v, T: ?Sized> VisitValue<'v> for &'a mut T
   540→where
   541→    T: VisitValue<'v>,
   542→{
   602→pub(in crate::kv) mod inner {
   610→    use super::*;
   612→    pub use value_bag::ValueBag as Inner;
   614→    pub use value_bag::Error;
   721→pub(in crate::kv) mod inner {
   735→    use super::*;
   737→    #[derive(Clone)]
   738→    pub enum Inner<'v> {
   739→        None,
   740→        Bool(bool),
   741→        Str(&'v str),
   742→        Char(char),
   743→        I64(i64),
   744→        U64(u64),
   745→        F64(f64),
   746→        I128(i128),
   747→        U128(u128),
   748→        Debug(&'v dyn fmt::Debug),
   749→        Display(&'v dyn fmt::Display),
   750→    }
  1123→pub use VisitValue as Visit;
  1129→macro_rules! as_debug {
  1139→macro_rules! as_display {
  1149→macro_rules! as_error {
  1159→macro_rules! as_serde {
  1169→macro_rules! as_sval {

src/lib.rs
   401→use std::error;
   405→#[macro_use]
   406→mod macros;
   407→mod serde;
   409→#[cfg(feature = "kv")]
   410→pub mod kv;
   413→use std::sync::atomic::{AtomicUsize, Ordering};
   416→use std::cell::Cell;
   418→use std::sync::atomic::Ordering;
   420→#[cfg(not(target_has_atomic = "ptr"))]
   421→struct AtomicUsize {
   422→    v: Cell<usize>,
   423→}
   426→impl AtomicUsize {
   427→    const fn new …
   431→    fn load …
   435→    fn store …
   443→unsafe impl Sync for AtomicUsize {}
   467→/// An enum representing the available verbosity levels of the logger.
   468→///
      →…
   475→pub enum Level {
   476→    /// The "error" level.
   477→    ///
   478→    /// Designates very serious errors.
   479→    // This way these line up with the discriminants for LevelFilter below
   480→    // This works because Rust treats field-less enums the same way as C does:
   481→    // https://doc.rust-lang.org/reference/items/enumerations.html#custom-discriminant-values-for-field-less-enumerations
   482→    Error = 1,
   483→    /// The "warn" level.
   484→    ///
   485→    /// Designates hazardous situations.
   486→    Warn,
   487→    /// The "info" level.
   488→    ///
   489→    /// Designates useful information.
   490→    Info,
   491→    /// The "debug" level.
   492→    ///
   493→    /// Designates lower priority information.
   494→    Debug,
   495→    /// The "trace" level.
   496→    ///
   497→    /// Designates very low priority, often extremely verbose, information.
   498→    Trace,
   499→}
   516→    type Err = ParseLevelError;
   535→    fn from_usize …
   626→/// An enum representing the available verbosity level filters of the logger.
   627→///
      →…
   636→pub enum LevelFilter {
   637→    /// A level lower than all log levels.
   638→    Off,
   639→    /// Corresponds to the `Error` log level.
   640→    Error,
   641→    /// Corresponds to the `Warn` log level.
   642→    Warn,
   643→    /// Corresponds to the `Info` log level.
   644→    Info,
   645→    /// Corresponds to the `Debug` log level.
   646→    Debug,
   647→    /// Corresponds to the `Trace` log level.
   648→    Trace,
   649→}
   666→    type Err = ParseLevelError;
   685→    fn from_usize …
   780→#[derive(Copy, Clone, Eq, PartialEq, Ord, PartialOrd, Hash, Debug)]
   781→enum MaybeStaticStr<'a> {
   782→    Static(&'static str),
   783→    Borrowed(&'a str),
   784→}
   787→    #[inline]
   788→    fn get(&self) -> &'a str {
   789→        match *self {
      →…
   796→/// The "payload" of a log message.
   797→///
      →…
   842→pub struct Record<'a> {
   843→    metadata: Metadata<'a>,
   844→    args: fmt::Arguments<'a>,
   845→    module_path: Option<MaybeStaticStr<'a>>,
   846→    file: Option<MaybeStaticStr<'a>>,
   847→    line: Option<u32>,
   848→    #[cfg(feature = "kv")]
   849→    key_values: KeyValues<'a>,
   850→}
   856→#[cfg(feature = "kv")]
   857→#[derive(Clone)]
   858→struct KeyValues<'a>(&'a dyn kv::Source);
   861→impl<'a> fmt::Debug for KeyValues<'a> {
   963→/// Builder for [`Record`](struct.Record.html).
   964→///
      →…
  1003→pub struct RecordBuilder<'a> {
  1004→    record: Record<'a>,
  1005→}
  1119→/// Metadata about a log message.
  1120→///
      →…
  1158→pub struct Metadata<'a> {
  1159→    level: Level,
  1160→    target: &'a str,
  1161→}
  1183→/// Builder for [`Metadata`](struct.Metadata.html).
  1184→///
      →…
  1200→pub struct MetadataBuilder<'a> {
  1201→    metadata: Metadata<'a>,
  1202→}
  1248→/// A trait encapsulating the operations required of a logger.
  1249→pub trait Log: Sync + Send {
  1282→/// A dummy initial value for LOGGER.
  1283→struct NopLogger;
  1311→impl<T> Log for std::boxed::Box<T>
  1312→where
  1313→    T: ?Sized + Log,
  1314→{
  1328→impl<T> Log for std::sync::Arc<T>
  1329→where
  1330→    T: ?Sized + Log,
  1331→{
  1482→#[cfg(target_has_atomic = "ptr")]
  1483→fn set_logger_inner<F>(make_logger: F) -> Result<(), SetLoggerError>
  1484→where
  1485→    F: FnOnce() -> &'static dyn Log,
  1486→{
  1487→    match STATE.compare_exchange(
      →…
  1544→/// The type returned by [`set_logger`] if [`set_logger`] has already been called.
  1545→///
      →…
  1549→pub struct SetLoggerError(());
  1559→impl error::Error for SetLoggerError {}
  1561→/// The type returned by [`from_str`] when the string doesn't match any of the log levels.
  1562→///
      →…
  1566→pub struct ParseLevelError(());
  1576→impl error::Error for ParseLevelError {}
  1599→#[doc(hidden)]
  1600→pub mod __private_api;
  1602→/// The statically resolved maximum log level.
  1603→///
  1604→/// See the crate level documentation for information on how to configure this.
  1605→///
  1606→/// This value is checked by the log macros, but not by the `Log`ger returned by
  1607→/// the [`logger`] function. Code that manually calls functions on that value
  1608→/// should compare the level against this value.
  1609→///
  1610→/// [`logger`]: fn.logger.html
  1611→pub const STATIC_MAX_LEVEL: LevelFilter = match cfg!(debug_assertions) {
  1612→    false if cfg!(feature = "release_max_level_off") => LevelFilter::Off,
      →…

src/macros.rs

src/serde.rs
     9→use crate::{Level, LevelFilter, LOG_LEVEL_NAMES};

test_max_level_features/Cargo.toml
     1→[package]
     7→[[bin]]
    11→[dependencies.log]

test_max_level_features/main.rs
     1→use log::{debug, error, info, trace, warn, Level, LevelFilter, Log, Metadata, Record};
     2→use std::sync::{Arc, Mutex};
     5→use log::set_boxed_logger;
     6→#[cfg(not(feature = "std"))]
     7→fn set_boxed_logger(logger: Box<dyn Log>) -> Result<(), log::SetLoggerError> {
     8→    log::set_logger(Box::leak(logger))
     9→}
    11→struct State {
    12→    last_log: Mutex<Option<Level>>,
    13→}
    15→struct Logger(Arc<State>);
    17→impl Log for Logger {
    18→    fn enabled(&self, _: &Metadata) -> bool {
    19→        true
    20→    }
    22→    fn log(&self, record: &Record) {
    23→        *self.0.last_log.lock().unwrap() = Some(record.level());
    24→    }
    26→    fn flush(&self) {}
    29→fn main() {
    44→fn test(a: &State, filter: LevelFilter) {
    72→fn last(state: &State, expected: Option<Level>) {

tests/integration.rs
     6→struct State {
    11→struct Logger(Arc<State>);
    13→impl Log for Logger {

tests/macros.rs
     3→macro_rules! all_log_macros {
    14→struct Logger;
    16→impl Log for Logger {
   420→enum Type {
   421→    Some,
   422→    None,
   423→}

triagebot.toml
     1→[assign]
